--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@
         }
         .embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }
     </style>
-    <script type="module" src="index.js"></script>
+    <script type="module" src="index.js">
+        burgers();
+    </script>
     
 </head>
 
@@ -62,7 +64,7 @@
                     <a class="navbar-item" href="#pagetop">
                         <img src="images/logo.png" style="border-radius: 5px; max-height: 60px">
                     </a>
-                    <a role="button" class="navbar-burger burger nav-toggle" onclick="toggleBurger()" aria-label="menu" aria-expanded="false" style="width:10vh; height:10vh">  
+                    <a role="button" class="navbar-burger burger nav-toggle" aria-label="menu" aria-expanded="false" style="width:10vh; height:10vh">  
                         <span aria-hidden="true" style="color:white"></span>
                         <span aria-hidden="true" style="color:white"></span>
                         <span aria-hidden="true" style="color:white"></span>
@@ -255,7 +257,6 @@
 
     </footer>
 
-    <script type="text/javascript" src="/burger.js"></script>
 </body>
 
 </html>
