--- a/sponsors.html
+++ b/sponsors.html
@@ -175,35 +175,19 @@
                         <div class="card custom-shadow">
                             <div class="card-content">
                                 <a data-cold href="content/First Semester Report.pdf" target="_blank">
-                                    <img src="images/FirstSem.png" style="border-radius: 2vh;">
+                                    <img src="images/sem.PNG" style="border-radius: 2vh;">
                                 </a>
                             </div>
                             <footer class="card-footer">
                                 <p class="card-footer-item">
                                     <span>
-                                        <a data-cold href="./content/First Semester Report.pdf" target="_blank" type="application/pdf" rel="alternate">First Semester Report.pdf</a>
+                                        <a data-cold href="./content/SemesterReport.pdf" target="_blank" type="application/pdf" rel="alternate">First Semester Report.pdf</a>
                                     </span>
                                 </p>
                             </footer>
                         </div>
                     </div>
 
-                    <div class="column is-one-quarter center">
-                        <div class="card custom-shadow">
-                            <div class="card-content">
-                                <a data-cold href="content/2023 Robotics Season (Sponsor Update 2).pdf" target="_blank">
-                                    <img src="images/2023Update.png" style="border-radius: 2vh;">
-                                </a>
-                            </div>
-                            <footer class="card-footer">
-                                <p class="card-footer-item">
-                                    <span>
-                                        <a data-cold href="./content/2023 Robotics Season (Sponsor Update 2).pdf" target="_blank" type="application/pdf" rel="alternate">2023 Robotics Season (Sponsor Update 2).pdf</a>
-                                    </span>
-                                </p>
-                            </footer>
-                        </div>
-                    </div>
                 </div>
 
 
