--- a/sponsors.html
+++ b/sponsors.html
@@ -175,7 +175,7 @@
                         <div class="card custom-shadow">
                             <div class="card-content">
                                 <a data-cold href="content/First Semester Report.pdf" target="_blank">
-                                    <img src="images/sem.PNG" style="border-radius: 2vh;">
+                                    <img src="images/sem.png" style="border-radius: 2vh;">
                                 </a>
                             </div>
                             <footer class="card-footer">
