--- a/sponsors.html
+++ b/sponsors.html
@@ -174,7 +174,7 @@
                     <div class="column is-one-quarter center">
                         <div class="card custom-shadow">
                             <div class="card-content">
-                                <a data-cold href="content/First Semester Report.pdf" target="_blank">
+                                <a data-cold href="./content/SemesterReport.pdf" target="_blank">
                                     <img src="images/sem.png" style="border-radius: 2vh;">
                                 </a>
                             </div>
